force-app/main/default/objects/Torc_Job_Type_Skill__c/Torc_Job_Type_Skill__c.object-meta.xml
<CustomObject>
    <label>Torc Job Type Skill</label>
    <nameField>
        <displayFormat>TJTS-{00000}</displayFormat>
        <label>Torc Job Type Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc Job Type Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>