force-app/main/default/objects/Torc_Job_Type_Skill__c/fields/Torc_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Torc_Job_Type__c</fullName>
    <label>Torc Job Type</label>
    <referenceTo>Torc_Job_Type__c</referenceTo>
    <relationshipLabel>Torc Job Type Skills</relationshipLabel>
    <relationshipName>Torc_Job_Type_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>