force-app/main/default/objects/Torc_Job_Type_Skill__c/fields/Torc_Skill__c.field-meta.xml
<CustomField>
    <fullName>Torc_Skill__c</fullName>
    <label>Torc Skill</label>
    <referenceTo>Torc_Skill__c</referenceTo>
    <relationshipLabel>Torc Job Type Skills</relationshipLabel>
    <relationshipName>Torc_Job_Type_Skills</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>